# data-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: bigquery_utils.py  csv_handling.py  memory_utils.py
src/data_utils/: __init__.py
src/data_utils/csv/: __init__.py  handler.py
